[metadata]
description = CodeLibrary is a curated collection of python code snippets and examples organized by topics. The main goal of this repository is to provide reusability for frequently used code.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/Kydoimos97/CodeLibrary
license = GNU-GPL 3.0
author_email = "willemvanderschans97+CodeLib@gmail.com"
author = Willem van der Schans
project_urls =
    Bug Reports = https://github.com/Kydoimos97/CodeLibrary/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU-GPL 3.0
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Reference
